# mc-version-chooser

./: Metadata.toml  README.md
.github/workflows/: release.yml
backend/: Cargo.toml
backend/src/: lib.rs  settings.rs
frontend/: package.json
frontend/src/: AdminConfigPage.tsx  VersionChooserPage.tsx  api.ts  app.css  index.ts
migrations/20260401000000_create_mcvc_installs/: down.sql  up.sql
